SequenceManagerImpl::IsIdleForTesting to match MessageLoop behavior

The MessageLoop version of IsIdleForTesting does not take Now() into
account, but the SequenceManager version was.  This is a mistake
because its flaky when there are delayed tasks that are just about
to run.

TBR=fdoray@chromium.org

Bug: 910645, 863341, 891670
Change-Id: Ieaf5e534df0f553046b76fa844f61e4a268082f9
Reviewed-on: https://chromium-review.googlesource.com/c/1365233
Reviewed-by: Alex Clarke <alexclarke@chromium.org>
Reviewed-by: Alexander Timin <altimin@chromium.org>
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Commit-Queue: Alex Clarke <alexclarke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614330}
Former-commit-id: 1dc884dc9ff9b74841192d420479197f80c3ac9c